1.8.9 patch 1 (sasha)
 o Fix X libraries order, to have Xext preceed X11 - causes problems on
   some Solaris systems.
 o fixed two warnings related to time.h   
 o commented out dependency checking to avoid problems for users with old 
   compilers. It is not needed in stable series anyways.
 o Added functionality to WindowsDesk function. If second argument is 
   10000 then first is relative desk number, instead of exact.
 o Implemented Xinerama support. When window is initially placed - it
   will be appropriately moved to not appear in between monitors, unless 
   user requested geometry explicetely.
 o When Xinerama is active, and asetroot is requested to scale or pad 
   background image to the screen size it will use size of the first head
   ( the one with origin of 0,0 ).
 o Implemented separate Feel, Look, Background and Init/Restart functions 
   for different screens in multihead config with no Xinerama.
 o We now read $TMPDIR in order to locate /tmp directory, and falling back 
   to /tmp if envvar is not set.
 o somewhat fixed Align and Pad fields in the Asetroot config parsing.

1.8.8 patch 1 (sasha+allanon)
 o installastheme.pl now uses the first screen depth reported by xdpyinfo
   instead of the last; this fixes problems with the look not updating on
   XFree86 4.x (allanon)
 o removed reference to xiterm from Wharf config file; wharf now tries to
   load aterm, and then xterm if that fails (allanon)
 o fix to mystyle drawing as applyed to empty menu drawing
 o removed config reading from the pipe - was causing some compile time 
   problems and really was never needed.
 o updated README.nl
 o fixed configure to sheck if X11/xpm.h should be used or just xpm.h, 
   updated as_xpm.c accordingly.

1.8.4 patch 4 (sasha)
 o Added -fPIC to the compilation flags when compiling with GCC so to allow 
   for compilation on IA64 architecture( as sugested on AS MailingList).
 
1.8.4 patch 3 (sasha)